syntax = "proto3";

package sluice.v1;

service Sluice {
  // Unary Publish: Fast, simple, confirms persistence.
  // Returns only after the message is fsync'd to the WAL.
  rpc Publish(PublishRequest) returns (PublishResponse) {}

  // Batch Publish: Publish multiple messages atomically.
  // All messages are persisted in a single transaction.
  rpc BatchPublish(BatchPublishRequest) returns (BatchPublishResponse) {}

  // Unary ListTopics: Topic discovery for interactive clients.
  // Returns an ordered list for stable UI rendering.
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse) {}

  // Bidirectional Streaming Subscribe:
  // Client sends: SubscribeRequest (init), then Credit/Ack messages.
  // Server sends: MessageDelivery.
  rpc Subscribe (stream SubscribeUpstream) returns (stream SubscribeDownstream);

  // Unary GetTopicStats: Retrieve statistics for one or more topics.
  // Returns message counts, sequence ranges, and consumer group info.
  rpc GetTopicStats(GetTopicStatsRequest) returns (GetTopicStatsResponse) {}

  // Admin: Delete a topic and all its messages and subscriptions.
  rpc DeleteTopic(DeleteTopicRequest) returns (DeleteTopicResponse) {}

  // Admin: Delete a consumer group's subscription for a topic.
  rpc DeleteConsumerGroup(DeleteConsumerGroupRequest) returns (DeleteConsumerGroupResponse) {}

  // Admin: Reset a consumer group's cursor to a specific sequence number.
  rpc ResetCursor(ResetCursorRequest) returns (ResetCursorResponse) {}
}

message ListTopicsRequest {
  // No fields for MVP.
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message Topic {
  string name = 1;
  // Unix timestamp (milliseconds)
  int64 created_at = 2;
}

message PublishRequest {
  // The target topic. Created automatically if it doesn't exist (MVP feature).
  string topic = 1;

  // The opaque payload. Sluice does not inspect this.
  bytes payload = 2;

  // Structured headers for tracing (W3C Trace Context) and application metadata.
  map<string, string> attributes = 3;
}

message PublishResponse {
  // UUIDv7 (Time-sortable) assigned by the server.
  string message_id = 1;

  // The local monotonic sequence number for this topic.
  uint64 sequence = 2;

  // Server-side timestamp (Unix epoch ms).
  int64 timestamp = 3;
}

message BatchPublishRequest {
  // The target topic. Created automatically if it doesn't exist.
  string topic = 1;

  // The messages to publish atomically.
  repeated BatchMessage messages = 2;
}

message BatchMessage {
  // The opaque payload.
  bytes payload = 1;

  // Structured headers for tracing and application metadata.
  map<string, string> attributes = 2;
}

message BatchPublishResponse {
  // Results for each message in order.
  repeated PublishResult results = 1;

  // Common timestamp for all messages in this batch.
  int64 timestamp = 2;
}

message PublishResult {
  // UUIDv7 (Time-sortable) assigned by the server.
  string message_id = 1;

  // The local monotonic sequence number for this topic.
  uint64 sequence = 2;
}

message SubscribeUpstream {
  oneof request {
    // Sent exactly once as the first message to initialize the stream.
    SubscriptionInit init = 1;

    // Sent periodically to permit more data delivery.
    CreditGrant credit = 2;

    // Sent to confirm processing, allowing the server to advance the cursor.
    Ack ack = 3;

    // Sent to reject a message and request redelivery.
    Nack nack = 4;

    // Sent to acknowledge multiple messages at once.
    BatchAck batch_ack = 5;
  }
}

message SubscriptionInit {
  string           topic            = 1;
  string           consumer_group   = 2; // "default" for MVP if not specified.
  string           consumer_id      = 3; // Optional, for debugging/logging.
  InitialPosition  initial_position = 4;
  uint64           offset           = 5; // Required when initial_position == OFFSET.
  SubscriptionMode mode             = 6; // Default: CONSUMER_GROUP.
}

enum InitialPosition {
  LATEST   = 0; // Start from new messages only.
  EARLIEST = 1; // Start from the oldest available message.
  OFFSET   = 2; // Start from a specific sequence number (uses offset field).
}

enum SubscriptionMode {
  CONSUMER_GROUP = 0; // Default: respects cursor, updates on ack.
  BROWSE         = 1; // Ignores cursor, never updates it. For debugging/inspection.
}

message CreditGrant {
  // The number of messages the client is willing to accept.
  // This is additive. Sending 5 then 5 means the server has 10 credits.
  uint32 credits = 1;
}

message Ack {
  // The message_id being acknowledged.
  // Sluice MVP treats ACKs as cumulative for the cursor,
  // but idempotent for individual message tracking.
  string message_id = 1;
}

message Nack {
  // The message_id being rejected.
  string message_id = 1;

  // Optional delay before redelivery in milliseconds.
  // 0 = immediate redelivery.
  uint32 redelivery_delay_ms = 2;
}

message BatchAck {
  // The message_ids being acknowledged.
  // The cursor will be advanced to the maximum sequence among these messages.
  repeated string message_ids = 1;
}

message SubscribeDownstream {
  oneof response {
    MessageDelivery delivery = 1;
    Heartbeat heartbeat = 2;
    StreamError error = 3;
  }
}

message Heartbeat {
  // Server timestamp (Unix epoch ms).
  int64 timestamp = 1;

  // Latest sequence number in the topic (for consumer lag awareness).
  uint64 latest_seq = 2;
}

message StreamError {
  // Error code (e.g. "TOPIC_DELETED", "SLOW_CONSUMER").
  string code = 1;

  // Human-readable error message.
  string message = 2;
}

message MessageDelivery {
  string              message_id = 1;
  uint64              sequence   = 2;
  bytes               payload    = 3;
  map<string, string> attributes = 4;
  int64               timestamp  = 5;
  uint32              delivery_count = 6;
}

// GetTopicStats messages

message GetTopicStatsRequest {
  // If empty, returns stats for all topics.
  repeated string topics = 1;
}

message GetTopicStatsResponse {
  repeated TopicStats stats = 1;
}

message TopicStats {
  string topic = 1;
  uint64 total_messages = 2;
  uint64 first_sequence = 3;
  uint64 last_sequence = 4;
  int64 first_message_timestamp = 5;
  int64 last_message_timestamp = 6;
  int64 created_at = 7;
  repeated ConsumerGroupStats consumer_groups = 8;
}

message ConsumerGroupStats {
  string group_name = 1;
  uint64 cursor_sequence = 2;
  uint64 pending_count = 3;  // last_sequence - cursor_sequence
  int64 last_ack_timestamp = 4;
}

// Admin RPC messages

message DeleteTopicRequest {
  string topic = 1;
}

message DeleteTopicResponse {
  bool deleted = 1;
}

message DeleteConsumerGroupRequest {
  string topic = 1;
  string consumer_group = 2;
}

message DeleteConsumerGroupResponse {
  bool deleted = 1;
}

message ResetCursorRequest {
  string topic = 1;
  string consumer_group = 2;
  uint64 sequence = 3;
}

message ResetCursorResponse {
  bool updated = 1;
}
